--- a/latte-ec/src/main/res/layout/delegate_user_profile.xml
+++ b/latte-ec/src/main/res/layout/delegate_user_profile.xml
@@ -6,9 +6,9 @@
     android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
-        android:background="@android:color/holo_orange_dark"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:background="@android:color/holo_orange_dark" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_user_profile"
