--- a/app/src/main/res/layout/delegate_example.xml
+++ b/app/src/main/res/layout/delegate_example.xml
@@ -1,14 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
+    <Button
+        android:id="@+id/testRestClient"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="example delegate"
-        tools:ignore="HardcodedText" />
+        android:text="testRestClient" />
+
+    <Button
+        android:id="@+id/onCallRxGet"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="onCallRxGet" />
+
+    <Button
+        android:id="@+id/onCallRxRestClient"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="onCallRxRestClient" />
 
 </LinearLayout>
